--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -69,6 +69,12 @@
             font-weight: bold;
             cursor: pointer;
             margin-top: 10px;
+
+            &:disabled{
+              background-color:rgba(0, 92, 92, 0.322);
+              cursor: not-allowed;
+            }
+
           }
         }
       }
